Fixing z-indices to prevent group suggestions overlapping with bottom navigation

--- a/src/components/BottomNavigation/styles.scss
+++ b/src/components/BottomNavigation/styles.scss
@@ -23,4 +23,5 @@
   left: 0;
   display: flex;
   justify-content: center;
+  z-index: 3000;
 }
